_sass/components/_intro.scss
.intro {  
  padding: 2em 0 5em 0;
  background-color: $color-brand-primary;
  color: $color-background;
  line-height: 1.2;

    h1 {
      font-size: 3em;
      font-weight: 700;
      letter-spacing: -.03em;
      color: $color-brand-secondary;
    }

    p {
      margin-bottom: 0;
      font-size: 2.25em;
      font-weight: 300;
    }
}

.internal {
  text-align: center;
}

.text-center {
  text-align: center;
}

@include responsive(40.063em) {
  .intro {
    padding: .65em 0 2.5em 0;

      h1 {
        line-height: 1;
        margin-bottom: .5em;
      }
  }
}

